--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 				<ul class="skill-list">
 					<li>三年设计，五年前端</li>
 					<li>精通html | CSS | JS | PS</li>
-					<li>精通 AngularJs和VUE 并阅读过源码，知晓原理</li>
+					<li>精通 AngularJs和VUE 并阅读过源码，知晓原理，有大型项目经验</li>
 					<li>掌握React，RN及调试。</li>
 					<li>精通正则,可实现各种复杂验证</li>
 					<li>深入研究过 webpack，并知晓原理。</li>
@@ -139,9 +139,9 @@
 					<li>熟练操作linux，掌握常用shell Script。</li>
 					<li>了解前端性能优化，熟练使用 DevTools 进行开发和断点调试</li>
 					<li>习惯使用MAC,五笔，有优雅的编码style</li>
-					<li>熟练使用express mongodb,熟悉PHP,JAVA,MySql,Nginx，网络等</li>
+					<li>熟练使用express, mongodb,并有一定实践, 熟悉PHP,JAVA,MySql,Nginx，网络等</li>
 					<li>具备英文文档阅读和日常口语交流能力，美联m3</li>
-					<li>有管理经验</li>
+					<li>有原创技术<a target="_blank" href="https://juejin.im/user/5976a74651882507db6e82ef/posts">博客</a>，有管理经验</li>
 				</ul>
 			</section>
 
