--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 					</li>
 					<li class="project-list-item">
 						<h4 class="project-h">人人车ROP系统</h4>
-						<p class="project-tech">(KeystoneJS / Mongoose / pm2 /passport-cas / winston / morgan / node-schedule)</p>
+						<p class="project-tech">(KeystoneJS / Mongoose / pm2 / multer / winston / morgan / node-schedule)</p>
 						<p class="project-desc">对主站提供城市服务费，banner配置，开城等</p>
 						<ul class="project-my-duty">
 							<li>2016年的node项目，交接给我负责维护</li>
