--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>简历 | 高坡</title>
+	<title>前端简历 | 高坡</title>
 	<style>
 		body,html {
 			margin: 0;
@@ -128,13 +128,12 @@
 			<section id="skills">
 				<h3>个人能力</h3>
 				<ul class="skill-list">
-					<li>三年设计，五年前端</li>
 					<li>精通html | CSS | JS | PS</li>
-					<li>精通 AngularJs和VUE 并阅读过源码，知晓原理，有大型项目经验</li>
+					<li>精通 AngularJs和VUE, 并阅读过源码，知晓原理，有大型项目经验</li>
 					<li>掌握React，RN及调试。</li>
 					<li>精通正则,可实现各种复杂验证</li>
 					<li>深入研究过 webpack，并知晓原理。</li>
-					<li>熟练掌握Git，并研究过原理</li>
+					<li>深入研究过 Git，并知晓原理</li>
 					<li>熟悉常用设计模式 并有自己理解</li>
 					<li>熟练操作linux，掌握常用shell Script。</li>
 					<li>了解前端性能优化，熟练使用 DevTools 进行开发和断点调试</li>
@@ -154,7 +153,7 @@
 				</div>
 
 				<ul class="skill-list">
-					<li>金融owner：了解金融贷款全流程，负责任务分配，解决疑难bug,指导初中级工程师。</li>
+					<li>金融组前端负责人：负责金融组所有项目，负责任务分配，解决疑难bug,指导初中级工程师。</li>
 					<li>前端架构师：负责人人车脚手架，组件库，招聘，jenkins部署,钉钉通知等一些node服务</li>
 				</ul>
 
@@ -165,8 +164,8 @@
 
 				<ul class="skill-list">
 					<li>ReachMax广告投放系统负责人，并参与其它产品线。</li>
-					<li>独立设计负责权限模块，实现菜单树跨层级拖拽，登录退出，路由和按钮的权限，角色和用户配置。</li>
-					<li>独立设计负责智营系统，是一个查看公司业务运行状态的平台，主要以echars图表为主。</li>
+					<li>独立设计权限模块，实现菜单树跨层级拖拽，登录退出，路由和按钮的权限，角色和用户配置。</li>
+					<li>独立设计智营系统，是一个查看公司业务运行状态的平台，主要以echars图表为主。</li>
 					<li>工作其间自己封装angular1指令和组件。以PC平台为主。</li>
 				</ul>
 				<div class="company">
@@ -199,19 +198,17 @@
 						<p class="project-desc">包含车源配置，贷前、贷中、贷后全流程，公司最复杂系统。
 						</p>
 						<ul class="project-my-duty">
-							<li>2016年项目，项目负责人，系统优化,历史遗留bug fixed</li>
+							<li>2016年项目，项目负责人，系统优化，解决历史遗留bug</li>
 							<li>负责整个项目需求排期上线</li>
-							<li>目前同事在用vue做重构</li>
 						</ul>
 					</li>
 					<li class="project-list-item">
 						<h4 class="project-h">人人车贷后APP</h4>
-						<p class="project-tech">(Android + RN 混合应用 / Fetch)</p>
+						<p class="project-tech">(Android + RN 混合应用)</p>
 						<p class="project-desc">通过NativeModules 实现用户登录，上传图片，展示图片</p>
 						<ul class="project-my-duty">
 							<li>系统优化, 负责整个需求</li>
 							<li>使用Android在手机端开发，Charles抓包，热更发版</li>
-							<li>目前同事在用vue做h5重构</li>
 						</ul>
 					</li>
 					<li class="project-list-item">
