--- a/index.html
+++ b/index.html
@@ -118,29 +118,29 @@
 	<div id="wrapper">
 		<header>
 			<h1>高坡</h1>
-			<p>前端架构</p>
+			<p>前端开发</p>
 			<p>30岁 / 本科 / 8年经验</p>
-			<p>18801220553 / 5010320@qq.com / WeChat: gp0320</p>
-			<p>> 掘金ID:<a target="_blank" href="https://juejin.im/user/5976a74651882507db6e82ef/posts">前端博书</a> / Site: >
-				<a target="_blank" href="http://blook.me"> blook.me</a></p>
+			<p>18801220553 / 5010320@qq.com</p>
+			<!--<p>> -->
 		</header>
 		<main>
 			<section id="skills">
 				<h3>个人能力</h3>
 				<ul class="skill-list">
+					<li>设计3年，前端5年</li>
 					<li>精通html | CSS | JS | PS</li>
 					<li>精通 AngularJs和VUE, 并阅读过源码，知晓原理，有大型项目经验</li>
-					<li>掌握React，RN及调试。</li>
+					<li>熟练掌握React，RN及移动端调试，并有开发经验</li>
 					<li>精通正则,可实现各种复杂验证</li>
-					<li>深入研究过 webpack 和 Git，并知晓原理。擅长工程化。</li>
-					<li>熟练使用npm, yarn, lerna, babel, rollup。</li>
-					<li>熟悉常用设计模式 并有自己理解</li>
-					<li>熟练操作linux，掌握常用shell Script。</li>
-					<li>了解前端性能优化，熟练使用 DevTools 进行开发和断点调试</li>
-					<li>习惯使用MAC,五笔，有优雅的编码style</li>
-					<li>熟练使用express, mongodb,并有一定实践, 熟悉PHP,JAVA,MySql,Nginx，网络等</li>
-					<li>具备英文文档阅读和日常口语交流能力，美联m3</li>
+					<li>熟练掌握并研究过 webpack 和 Git，知晓原理。</li>
+					<li>熟练掌握NPM, Yarn, Lerna, Babel, Rollup，Jenkins。</li>
+					<li>熟练掌握设计模式 并有自己总结</li>
+					<li>熟练操作Linux，掌握常用shell Script。</li>
+					<li>熟练掌握并研究过浏览器渲染，http网络, 调试</li>
+					<li>熟练掌握express, koa, mongodb,并有一定实践</li>
+					<li>了解并使用过Docker, Nginx, Redis, MySQL</li>
 					<li>有管理经验</li>
+					<li>有高质量原创掘金专栏：掘金ID: <a target="_blank" href="https://juejin.im/user/5976a74651882507db6e82ef/posts">博志书</a></li>
 				</ul>
 			</section>
 
@@ -149,37 +149,37 @@
 			<section id="working-experience">
 				<h3>工作经历</h3>
 				<div class="company">
-					<h4 class="company-name">人人车 (2018.5 - ) </h4>
+					<h4 class="company-name">人人车 (2018.5 - )  金融组前端leader 前端架构师</h4>
 				</div>
 
 				<ul class="skill-list">
-					<li>金融组前端负责人：负责金融组所有项目，负责任务分配，解决疑难bug,指导初中级工程师。</li>
-					<li>前端架构师：负责人人车脚手架，组件库，招聘，jenkins部署,钉钉通知等一些node服务</li>
+					<li>负责金融前端项目版本迭代，负责任务分配，解决疑难bug。</li>
+					<li>负责人人车主站PC端，M端，小程序和一些node项目</li>
+					<li>负责人人车脚手架cli，组件库，jenkins部署, 招聘，技术分享</li>
 				</ul>
 
 
 				<div class="company">
-					<h4 class="company-name">加和科技 (2016.6 - 2018.4) </h4>
+					<h4 class="company-name">加和科技 (2016.6 - 2018.4) 高级前端</h4>
 				</div>
 
 				<ul class="skill-list">
 					<li>ReachMax广告投放系统负责人，并参与其它产品线。</li>
 					<li>独立设计权限模块，实现菜单树跨层级拖拽，登录退出，路由和按钮的权限，角色和用户配置。</li>
 					<li>独立设计智营系统，是一个查看公司业务运行状态的平台，主要以echars图表为主。</li>
-					<li>工作其间自己封装angular1指令和组件。以PC平台为主。</li>
+					<li>自己封装许多指令和组件。</li>
 				</ul>
 				<div class="company">
-					<h4 class="company-name">博奥生物 (2014.8 - 2016.5) </h4>
+					<h4 class="company-name">博奥生物 (2014.8 - 2016.5) 前端</h4>
 				</div>
 
 				<ul class="skill-list">
-					<li>大型国企，健康产业</li>
-					<li>LAMP全栈开发，基于ECshop做商城。年终获得优秀员工。</li>
+					<li>LAMP全栈开发，基于jq, ECshop做商城。年度优秀员工。</li>
 					<li>在职期间对产品感兴趣读过引爆点、无价、影响力、交互设计、行为学、小米参与感、马云传和乔布斯传等</li>
 				</ul>
 
 				<div class="company">
-					<h4 class="company-name">爱丽女性网 (2011.8 - 2013.8)</h4>
+					<h4 class="company-name">爱丽女性网 (2011.8 - 2013.8)  网页设计与制作</h4>
 				</div>
 
 				<!--<ul class="skill-list">-->
@@ -194,76 +194,76 @@
 				<ul class="project-list">
 					<li class="project-list-item">
 						<h4 class="project-h">人人车自营金融系统</h4>
-						<p class="project-tech">(gulp / angularJS-blur-admin / saas )</p>
-						<p class="project-desc">包含车源配置，贷前、贷中、贷后全流程，公司最复杂系统。
+						<p class="project-tech">(gulp / angularJS-blur-admin )</p>
+						<p class="project-desc">包含车源配置，贷前、贷中、贷后全流程。
 						</p>
 						<ul class="project-my-duty">
 							<li>2016年项目，项目负责人，系统优化，解决历史遗留bug</li>
 							<li>负责整个项目需求排期上线</li>
 						</ul>
 					</li>
+					<!--<li class="project-list-item">-->
+						<!--<h4 class="project-h">人人车贷后APP</h4>-->
+						<!--<p class="project-tech">(Android + RN 混合应用)</p>-->
+						<!--<p class="project-desc">通过NativeModules 实现用户登录，上传图片，展示图片</p>-->
+						<!--<ul class="project-my-duty">-->
+							<!--<li>系统优化, 负责整个需求</li>-->
+							<!--<li>使用Android在手机端开发，Charles抓包，热更发版</li>-->
+						<!--</ul>-->
+					<!--</li>-->
 					<li class="project-list-item">
-						<h4 class="project-h">人人车贷后APP</h4>
-						<p class="project-tech">(Android + RN 混合应用)</p>
-						<p class="project-desc">通过NativeModules 实现用户登录，上传图片，展示图片</p>
-						<ul class="project-my-duty">
-							<li>系统优化, 负责整个需求</li>
-							<li>使用Android在手机端开发，Charles抓包，热更发版</li>
-						</ul>
-					</li>
-					<li class="project-list-item">
-						<h4 class="project-h">人人车APP 内嵌分期购车H5 (2018年) </h4>
-						<p class="project-tech">(webpack4 / React / Axios)</p>
+						<h4 class="project-h">人人车主站</h4>
+						<p class="project-tech">(php / jq)</p>
 						<p class="project-desc"></p>
 						<ul class="project-my-duty">
-							<li>封装schema与客户端通信</li>
-							<li>负责工程化，jenkins部署</li>
+							<li>负责需求迭代</li>
+							<li>利用Docker运行开发环境</li>
 						</ul>
 					</li>
 					<li class="project-list-item">
-						<h4 class="project-h">人人车脚手架和组件库</h4>
+						<h4 class="project-h">人人车脚手架, 组件库, 工具库</h4>
 						<p class="project-tech">(webpack4 / vue / Lerna)</p>
-						<p class="project-desc">公司内部使用，开箱即用，一个命令生成pc中后台模板和移动端h5模板</p>
+						<p class="project-desc">公司内部使用，开箱即用，一个命令生成pc中台模板或移动端h5模板或mina小程序</p>
 						<ul class="project-my-duty">
-							<li>目前我一个人维护</li>
-							<li>集成ele-ui, SCSS, router, axios，7牛，eslint, stylelint, gitHook,jenkins脚本</li>
+							<li>集成ele-ui, 模板, router, axios，7牛，eslint, sentry, gitHook,jenkins脚本</li>
 						</ul>
 					</li>
 					<li class="project-list-item">
 						<h4 class="project-h">人人车ROP系统</h4>
-						<p class="project-tech">(KeystoneJS / Mongoose / pm2 / multer / winston / morgan / node-schedule)</p>
+						<p class="project-tech">(KeystoneJS / Mongoose / pm2 )</p>
 						<p class="project-desc">对主站提供城市服务费，banner配置，开城等</p>
 						<ul class="project-my-duty">
-							<li>2016年的node项目，交接给我负责维护</li>
+							<li>express项目，负责版本迭代</li>
+							<!--<li>node-schedule 做一些定时任务</li>-->
 						</ul>
 					</li>
-					<li class="project-list-item">
-						<h4 class="project-h"><a target="_blank" href="https://github.com/gp0320/stiletto">工具库框架</a> (2018年6月)</h4>
-						<p class="project-tech">(rollup / babel / jest / eslint / jsdoc-to-markdown)</p>
-						<p class="project-desc">完全自己手动配置</p>
-						<ul class="project-my-duty">
-							<li>负责整个框架的start init</li>
-							<li>由注释生成markdown,build支持es和umd,jest测试环境配置</li>
-						</ul>
-					</li>
+					<!--<li class="project-list-item">-->
+						<!--<h4 class="project-h"><a target="_blank" href="https://github.com/gp0320/stiletto">工具库框架</a> (2018年6月)</h4>-->
+						<!--<p class="project-tech">(rollup / babel / jest / eslint / jsdoc-to-markdown)</p>-->
+						<!--<p class="project-desc">完全自己手动配置</p>-->
+						<!--<ul class="project-my-duty">-->
+							<!--<li>负责整个框架的start init</li>-->
+							<!--<li>由注释生成markdown,build支持es和umd,jest测试环境配置</li>-->
+						<!--</ul>-->
+					<!--</li>-->
 					<li class="project-list-item">
 						<h4 class="project-h">ReachMax广告投放系统 (2016年) </h4>
 						<p class="project-tech">(webpack1 / angular1 / bootstrap / es2015 / jade / styl / git / eslint)</p>
 						<p class="project-desc">对接优酷，爱奇异，腾讯视频，头条，智能电视等媒体，服务一线品牌客户。</p>
 						<ul class="project-my-duty">
-							<li>使用周边插件库如moment, ngFileUpload, ui-bootstrap, daterangepicker, dndList, ui-tree, ui-router,echars,video.js等</li>
-							<li>封装过许多组件,<a target="_blank" href="http://blook.me/demo/#!/multiselect">点此查看</a></li>
+							<li>使用周边插件库moment, ngFileUpload, ui-bootstrap, daterangepicker, dndList, ui-tree, ui-router,echars,video.js等</li>
+							<li>封装过许多组件，也看过相关组件的源码</li>
 						</ul>
 					</li>
-					<li class="project-list-item">
-						<h4 class="project-h"><a target="_blank" href="http://blook.me/bioeh/">颐和商城</a> (2014年) </h4>
-						<p class="project-tech">(php / mysql / ecshop / jq / less)</p>
-						<p class="project-desc">自己默默加班codeing，最终成功上线，投入使用。</p>
-						<ul class="project-my-duty">
-							<li>独立完成设计，切图，html，自已画fonticon,php二次开发,接入支付宝支付</li>
-							<li>通过阅读兄弟连php和mysql书籍，购买ecshop视频教程搞定</li>
-						</ul>
-					</li>
+					<!--<li class="project-list-item">-->
+						<!--<h4 class="project-h"><a target="_blank" href="http://blook.me/bioeh/">颐和商城</a> (2014年) </h4>-->
+						<!--<p class="project-tech">(php / mysql / ecshop / jq / less)</p>-->
+						<!--<p class="project-desc">自己默默加班codeing，最终成功上线，投入使用。</p>-->
+						<!--<ul class="project-my-duty">-->
+							<!--<li>独立完成设计，切图，html，自已画fonticon,php二次开发,接入支付宝支付</li>-->
+							<!--<li>通过阅读兄弟连php和mysql书籍，购买ecshop视频教程搞定</li>-->
+						<!--</ul>-->
+					<!--</li>-->
 				</ul>
 			</section>
 
@@ -287,10 +287,10 @@
 
 			<section id="footer">
 				<h3>附言</h3>
-				<p>工作经历涉及资讯，电商，健康，广告，金融领域，能迅速了解业务</p>
+				<!--<p>工作经历涉及资讯，电商，健康，广告，金融领域，能迅速了解业务</p>-->
 				<p>我对前端抱有很大的热情，喜欢钻研和探索，深入源码和设计思想。</p>
-				<p>而我亦有着不错的学习能力，设计和计算机等技术全部自学，系统看过很多技术书籍。</p>
-				<!--<p>希望找到不错的平台和小伙伴，将来代表中国的前端站在国际舞台。</p>-->
+				<!--<p>而我亦有着不错的学习能力，设计和计算机等技术全部自学，系统看过很多技术书籍。</p>-->
+				<p>希望找到不错的平台和小伙伴，喜欢有挑战的工作</p>
 				<p>最后，感谢您的阅读。</p>
 			</section>
 		</main>
