--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 					<li>熟练掌握设计模式 并有自己总结</li>
 					<li>熟练操作Linux，掌握常用shell Script。</li>
 					<li>熟练掌握并研究过浏览器渲染，http网络, 调试</li>
-					<li>熟练掌握express, koa, mongodb,并有一定实践</li>
-					<li>了解并使用过Docker, Nginx, Redis, MySQL</li>
+					<li>熟练掌握express, koa, mongodb,并有实践应用</li>
+					<li>了解并使用过Docker, Nginx, Redis, MySQL，PHP, JAVA</li>
 					<li>有管理经验</li>
 					<li>有高质量原创掘金专栏：掘金ID: <a target="_blank" href="https://juejin.im/user/5976a74651882507db6e82ef/posts">博志书</a></li>
 				</ul>
@@ -195,11 +195,10 @@
 					<li class="project-list-item">
 						<h4 class="project-h">人人车自营金融系统</h4>
 						<p class="project-tech">(gulp / angularJS-blur-admin )</p>
-						<p class="project-desc">包含车源配置，贷前、贷中、贷后全流程。
+						<p class="project-desc">贷款业务，包含车源配置，贷前、贷中、贷后整个流程。
 						</p>
 						<ul class="project-my-duty">
-							<li>2016年项目，项目负责人，系统优化，解决历史遗留bug</li>
-							<li>负责整个项目需求排期上线</li>
+							<li>负责业务需求分配排期，系统优化，解决历史遗留bug</li>
 						</ul>
 					</li>
 					<!--<li class="project-list-item">-->
@@ -212,16 +211,17 @@
 						<!--</ul>-->
 					<!--</li>-->
 					<li class="project-list-item">
-						<h4 class="project-h">人人车主站</h4>
-						<p class="project-tech">(php / jq)</p>
+						<h4 class="project-h">人人车主站(PC, M, MP)</h4>
+						<p class="project-tech">(php / jq / gulp)</p>
 						<p class="project-desc"></p>
 						<ul class="project-my-duty">
 							<li>负责需求迭代</li>
-							<li>利用Docker运行开发环境</li>
+							<li>PC和M端是PHP框架，前后端没有分离，本地运行Docker开发</li>
+							<li>MP项目是webpack和mina框架</li>
 						</ul>
 					</li>
 					<li class="project-list-item">
-						<h4 class="project-h">人人车脚手架, 组件库, 工具库</h4>
+						<h4 class="project-h">人人车脚手架, 组件库</h4>
 						<p class="project-tech">(webpack4 / vue / Lerna)</p>
 						<p class="project-desc">公司内部使用，开箱即用，一个命令生成pc中台模板或移动端h5模板或mina小程序</p>
 						<ul class="project-my-duty">
