--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			margin: 0;
 			padding: 0;
 			width: 100%;
-			font-size: 15px;
+			font-size: 16px;
 			font-family: sans-serif;
 		}
 		p,ul,li {
@@ -121,7 +121,7 @@
 	<div id="wrapper">
 		<header>
 			<h1>高坡</h1>
-			<p>前端开发</p>
+			<p>前端架构</p>
 			<p>30岁 / 本科 / 7年经验</p>
 			<p>18801220553 / 5010320@qq.com</p>
 			<!--<p>> -->
@@ -131,14 +131,14 @@
 				<h3>个人能力</h3>
 				<ul class="skill-list">
 					<li>精通html | CSS | JS | PS</li>
-					<li>精通 AngularJs和Vue, 了解原理读过源码 </li>
-					<li>熟练掌握React，RN及移动端调试，并有开发经验</li>
+					<li>精通 AngularJs和Vue, 了解原理源码 </li>
+					<li>熟练掌握React，RN及移动端调试</li>
 					<li>精通正则,可实现各种复杂验证</li>
 					<li>熟练掌握并研究过 webpack 原理。</li>
 					<li>熟练掌握NPM, Yarn, Lerna, Babel, Rollup，Git, Jenkins。</li>
 					<li>熟练掌握设计模式 并有自己总结</li>
 					<li>熟练操作Linux，掌握常用shell Script。</li>
-					<li>熟练掌握并研究过浏览器渲染，http网络, 调试</li>
+					<li>熟练掌握并研究过浏览器渲染，http网络</li>
 					<li>熟练掌握express, koa, mongodb,并有实践应用</li>
 					<li>了解并使用过Docker, Nginx, Redis, MySQL，PHP</li>
 					<li>有管理经验, 有原创掘金专栏：掘金ID: <a target="_blank" href="https://juejin.im/user/5976a74651882507db6e82ef/posts">博志书</a></li>
@@ -199,7 +199,7 @@
 						<p class="project-desc">贷款业务，包含车源配置，贷前、贷中、贷后整个流程。
 						</p>
 						<ul class="project-my-duty">
-							<li>负责业务需求分配排期，系统优化，解决历史遗留bug</li>
+							<li>封装服务，优化加载速度，解决历史遗留bug</li>
 						</ul>
 					</li>
 					<!--<li class="project-list-item">-->
@@ -211,22 +211,23 @@
 							<!--<li>使用Android在手机端开发，Charles抓包，热更发版</li>-->
 						<!--</ul>-->
 					<!--</li>-->
-					<!--<li class="project-list-item">-->
-						<!--<h4 class="project-h">人人车主站(PC, M, MP)</h4>-->
-						<!--<p class="project-tech">(php / jq / gulp)</p>-->
-						<!--<p class="project-desc"></p>-->
-						<!--<ul class="project-my-duty">-->
-							<!--<li>负责需求迭代</li>-->
-							<!--<li>PC和M端是PHP框架，前后端没有分离，本地运行Docker开发</li>-->
-							<!--<li>MP项目是webpack和mina框架</li>-->
-						<!--</ul>-->
-					<!--</li>-->
+					<li class="project-list-item">
+						<h4 class="project-h">人人车主站(PC, M, MP)三端</h4>
+						<p class="project-tech">(php / jq / gulp)</p>
+						<p class="project-desc"></p>
+						<ul class="project-my-duty">
+							<li>PC和M端是PHP框架，前后端没有分离，本地运行Docker开发</li>
+							<li>MP项目是webpack和mina框架</li>
+						</ul>
+					</li>
 					<li class="project-list-item">
 						<h4 class="project-h">人人车脚手架, 组件库</h4>
 						<p class="project-tech">(webpack4 / vue / Lerna)</p>
 						<p class="project-desc">公司内部使用，开箱即用，一个命令生成pc中台模板或移动端h5模板或mina小程序</p>
 						<ul class="project-my-duty">
 							<li>集成ele-ui, 模板, router, axios，7牛，eslint, sentry, gitHook,jenkins脚本</li>
+							<li>cli 是vue-cli的深度定制化</li>
+							<li>组件库 是ele-ui的再封装成区块</li>
 						</ul>
 					</li>
 					<li class="project-list-item">
@@ -234,10 +235,20 @@
 						<p class="project-tech">(KeystoneJS / Mongoose / pm2 )</p>
 						<p class="project-desc">对主站提供城市服务费，banner配置，开城等</p>
 						<ul class="project-my-duty">
-							<li>express项目，负责版本迭代</li>
-							<!--<li>node-schedule 做一些定时任务</li>-->
+							<li>passport-cas做单点登录，pm2部署</li>
+							<li>七牛上传CDN图片,加水印</li>
+							<li>webpack+react+antd 做自定义页面</li>
 						</ul>
 					</li>
+					<!--<li class="project-list-item">-->
+						<!--<h4 class="project-h">人人车APP 分期购车H5</h4>-->
+						<!--<p class="project-tech">(webpack4 / React )</p>-->
+						<!--<ul class="project-my-duty">-->
+							<!--<li>passport-cas做单点登录，pm2部署</li>-->
+							<!--<li>七牛上传CDN图片,加水印</li>-->
+							<!--<li>webpack+react+antd 做自定义页面,主要是列表表单</li>-->
+						<!--</ul>-->
+					<!--</li>-->
 					<!--<li class="project-list-item">-->
 						<!--<h4 class="project-h"><a target="_blank" href="https://github.com/gp0320/stiletto">工具库框架</a> (2018年6月)</h4>-->
 						<!--<p class="project-tech">(rollup / babel / jest / eslint / jsdoc-to-markdown)</p>-->
